// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchItem should render the item 1`] = `
<div
  class="gl-flex gl-items-center"
>
  <gl-avatar-stub
    alt="avatar"
    aria-hidden="true"
    class="gl-mr-3"
    entityid="37"
    entityname=""
    shape="rect"
    size="16"
    src="https://www.gravatar.com/avatar/a9638f4ec70148d51e56bf05ad41e993?s=80&d=identicon"
  />
  <span
    class="gl-flex gl-flex-col gl-min-w-0 gl-w-full"
  >
    <span
      class="gl-text-strong gl-truncate"
    >
      Cole Dickinson
    </span>
  </span>
</div>
`;

exports[`SearchItem should render the item 2`] = `
<div
  class="gl-flex gl-items-center"
>
  <gl-icon-stub
    class="gl-mr-3 gl-shrink-0"
    name="users"
    size="16"
    variant="current"
  />
  <span
    class="gl-flex gl-flex-col gl-min-w-0 gl-w-full"
  >
    <span
      class="gl-text-strong gl-truncate"
    >
      Manage &gt; Activity
    </span>
  </span>
</div>
`;

exports[`SearchItem should render the item 3`] = `
<div
  class="gl-flex gl-items-center"
>
  <gl-avatar-stub
    alt="avatar"
    aria-hidden="true"
    class="gl-mr-3"
    entityid="1"
    entityname="MockProject1"
    shape="rect"
    size="32"
    src="/project/avatar/1/avatar.png"
  />
  <span
    class="gl-flex gl-flex-col gl-min-w-0 gl-w-full"
  >
    <span
      class="gl-text-strong gl-truncate"
    >
      MockProject1
    </span>
    <span
      class="gl-text-sm gl-text-subtle gl-truncate"
    >
      Gitlab Org / MockProject1
    </span>
  </span>
</div>
`;

exports[`SearchItem should render the item 4`] = `
<div
  class="gl-flex gl-items-center"
>
  <gl-avatar-stub
    alt="avatar"
    aria-hidden="true"
    class="gl-mr-3"
    entityid="7"
    entityname="Flight"
    shape="rect"
    size="16"
    src=""
  />
  <span
    class="gl-flex gl-flex-col gl-min-w-0 gl-w-full"
  >
    <span
      class="gl-text-strong gl-truncate"
    >
      Dismiss Cipher with no integrity
    </span>
  </span>
</div>
`;
